fix loi z-index, admin

--- a/public/admin.css
+++ b/public/admin.css
@@ -2,8 +2,7 @@
 .data-table-container {
     margin: 20px 0;
     background-color: #ffffff;
-    border-radius: 8px;
-    padding: 15px;
+    padding: 10px;
     overflow-x: auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -26,6 +25,20 @@
 .admin-data-table td {
     padding: 10px 15px;
     border-bottom: 1px solid #e2e8f0;
+}
+
+.hide-row-btn {
+    background-color: #f8fafc;
+    color: #222;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 60px;
+
 }
 
 .admin-data-table tr:last-child td {
